create html and css for and serve it

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel='stylesheet' href='../public/css/app.css'>
 </head>
 <body>
-    This is my template.
+    <div class="main">
+        This is my template.
+    </div>
 </body>
 </html>
